# wapsell-saas

./: .env.example  .gitignore  CHARTER.md  EXTRACTION.md  Makefile  README.md  pyproject.toml  test_extractor_e2e.py
.github/workflows/: ci.yml  publish.yml
dashboard/admin/: README.md  next.config.mjs  package.json
dashboard/admin/public/: .gitkeep
docs/: DEPLOY-SUBDOMAINS.md  DEPLOY.md  DEV-LOCAL.md  META_DEV.md  PHASES.md  PLAN-CRM.md  PLAN-PAYMENTS-SPLIT.md  PLAN-PRE-CHIP.md  POSTMORTEM-2026-06-12.md  PRODUCTION-LOG.md
examples/: quickstart.py
infra/docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.base.yml  docker-compose.coexist.yml  docker-compose.prod.yml
infra/nginx/: api.wapsell.com.bootstrap.conf  api.wapsell.com.conf  app.wapsell.com.bootstrap.conf  app.wapsell.com.conf  nginx.conf
infra/postgres/migrations/: 001_facts.sql  002_tenants.sql  003_facts_spanish_tsv.sql  004_buyer_interactions.sql  005_tenants_soul_config.sql  006_message_templates.sql  007_users_sessions.sql  008_tenants_handoff_config.sql  009_bot_pauses.sql  010_resources.sql  011_subscriptions.sql
infra/scripts/: backup.sh  bootstrap.sh  deploy.sh  healthcheck.sh  rollback.sh  update.sh
infra/systemd/: waseller.service
migrations/: 001_sales_schema.sql
prompts/: 00-charter.md  03-gateway-kapso.md  04-preprocessor.md  05-rag-ingestion.md  06-buyer-memory.md  07-sales-logic-fix.md  08-multi-tenant.md  09-sdk-packaging.md  10-dashboard-admin.md  11-dashboard-client.md  12-onboarding.md  13-security-prod.md  90-github-push.md  91-extract-t1.md  92-extract-t2.md  93-extract-t3.md  INDEX.md
scripts/: 100_departamentos.json  backup-postgres.sh  bootstrap-admin.sh  demo-catalog-cafe.json  demo-catalog.json  load_inmo_catalog.py  seed-demo-catalog.sh  seed-multi-tenant-demo.sh  smoke-webhook.sh  test_rag_e2e.py  train_rag.py  training-prompts-examples.md
sdk/hermesell/: __init__.py  cli.py  client.py  tenant.py
sdk/hermesell/agent/: __init__.py  soul.py
sdk/hermesell/ingestion/: __init__.py  hindsight.py  preprocessor.py
sdk/hermesell/skills/: __init__.py  catalog_lookup.py  lead_qualifier.py  registry.py  sales_closer.py
sdk/hermesell/tenant/: repository.py  router.py
sdk/hermesell/whatsapp/: __init__.py  webhook.py
sdk/wapsell/: __init__.py  _envcompat.py  analytics.py  async_utils.py  caching.py  cli.py  client.py  logging.py  models.py  validation.py
sdk/wapsell/agent/: __init__.py  loop.py  soul.py
sdk/wapsell/auth/: __init__.py  repository.py  service.py
sdk/wapsell/billing/: __init__.py  adapter.py  models.py  repository.py  service.py
sdk/wapsell/crm/: __init__.py  extractor.py  recorder.py
sdk/wapsell/events/: __init__.py
sdk/wapsell/handoff/: __init__.py  detector.py  notifier.py
sdk/wapsell/inbox/: __init__.py  repository.py
sdk/wapsell/ingestion/: __init__.py  hindsight.py  preprocessor.py
sdk/wapsell/llm/: __init__.py  port.py
sdk/wapsell/memory/: __init__.py  buyer.py
sdk/wapsell/onboarding/: __init__.py  flow.py
sdk/wapsell/payments/: __init__.py  models.py  port.py  repository.py  service.py
sdk/wapsell/resources/: __init__.py  adapters.py  learning.py  repository.py  scheduler.py  sync.py
sdk/wapsell/sales/: __init__.py  buyer_profiles.py  test_buyer_profiles.py
sdk/wapsell/security/: __init__.py  crypto.py  log_filter.py
sdk/wapsell/skills/: __init__.py  catalog_lookup.py  lead_qualifier.py  registry.py  resource_search.py  sales_closer.py
sdk/wapsell/templates/: __init__.py  repository.py
sdk/wapsell/tenant/: __init__.py  manager.py  repository.py  router.py  spawner.py  supervisor.py
sdk/wapsell/whatsapp/: __init__.py  gateway.py  webhook.py
sdk/waseller/: __init__.py  cli.py  client.py  models.py
sdk/waseller/agent/: __init__.py  loop.py  soul.py
sdk/waseller/auth/: __init__.py  repository.py  service.py
sdk/waseller/billing/: __init__.py  adapter.py  models.py  plans.py  repository.py  service.py
sdk/waseller/crm/: __init__.py  recorder.py
sdk/waseller/events/: __init__.py
sdk/waseller/handoff/: __init__.py  detector.py  notifier.py
sdk/waseller/inbox/: __init__.py
sdk/waseller/ingestion/: __init__.py  hindsight.py  preprocessor.py
sdk/waseller/llm/: __init__.py  port.py
sdk/waseller/memory/: __init__.py  buyer.py
sdk/waseller/onboarding/: __init__.py  flow.py
sdk/waseller/resources/: __init__.py  adapters.py  learning.py  models.py  repository.py  scheduler.py  sync.py
sdk/waseller/security/: __init__.py  crypto.py  log_filter.py
sdk/waseller/skills/: __init__.py  catalog_lookup.py  lead_qualifier.py  registry.py  resource_search.py  sales_closer.py
sdk/waseller/templates/: __init__.py  repository.py
sdk/waseller/tenant/: __init__.py  manager.py  repository.py  router.py  spawner.py  supervisor.py
services/: __init__.py
services/api/: main.py
services/preprocessor/: __init__.py  worker.py
skills/catalog-lookup/: SKILL.md
skills/lead-qualifier/: SKILL.md
skills/sales-closer/: SKILL.md
tests/: test_admin_api.py  test_agent_loop.py  test_analytics.py  test_auth.py  test_auth_scoping.py  test_billing.py  test_crm.py  test_crm_extractor.py  test_crm_extractor_dispatch.py  test_crm_extractor_endpoints.py  test_events.py  test_extractor_simple_e2e.py  test_gateway.py  test_handoff.py  test_inbox.py  test_ingestion.py  test_learning.py  test_llm.py  test_memory.py  test_onboarding.py  test_payments.py  test_resource_adapters.py  test_resource_search_skill.py  test_resources.py  test_security.py  test_skills.py  test_soul.py  test_sync_scheduler.py  test_tenant.py  test_webhook.py
wapsell/: INTEGRATION_EXAMPLE.md  PHASE1_SUMMARY.md  __init__.py  closing_engine.py  closing_strategies.py  deals.py  objection_detector.py  products.py  test_closing_engine.py  test_closing_strategies.py  test_deals.py  test_objection_detector.py  test_products.py
wapsell/sales/: PHASE2_ROADMAP.md  __init__.py  buyer_profiles.py  celery_config.py  closing_engine.py  closing_strategies.py  deals.py  objection_detector.py  products.py  test_integration.py
(+74 files in other folders)
