[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "hermesell"
version = "0.1.0"
description = "WhatsApp Sales SaaS SDK — Hermes + Kapso + Hindsight + OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "fmonfasani" }]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "httpx>=0.27,<1.0",
    "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
]

[project.scripts]
hermesell = "hermesell.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sdk/hermesell"]

# -----------------------------------------------------------------------------
# Ruff
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["sdk", "services"]
extend-exclude = ["infra", "dashboard", "services/gateway"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "C4", "SIM", "PL", "RUF", "ANN", "ASYNC"]
ignore = ["ANN101", "ANN102", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "ANN", "PLR2004"]
"**/__init__.py" = ["F401"]
# CLI dispatches subcommands — many returns is natural and clearer than refactoring.
"sdk/hermesell/cli.py" = ["PLR0911"]
# SkillResult.ok is a builder helper; **data is intentionally dynamic.
"sdk/hermesell/skills/base.py" = ["ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["hermesell"]
force-sort-within-sections = true

# -----------------------------------------------------------------------------
# mypy
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
mypy_path = "sdk"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ["^infra/", "^dashboard/", "^services/gateway/"]

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
pythonpath = ["sdk", "."]
asyncio_mode = "auto"
markers = [
    "unit: pure unit tests",
    "integration: requires external services (postgres/redis/meta)",
    "smoke: in-process wiring checks",
]

[tool.coverage.run]
branch = true
source = ["hermesell"]
