[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "waseller"
version = "0.16.0"
description = "WhatsApp Sales SaaS SDK — autonomous WA agent (Hermes + Kapso + Hindsight RAG + Honcho memory + OpenRouter)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "fmonfasani", email = "fmonfasani@gmail.com" }]
keywords = ["whatsapp", "sales", "saas", "ai-agent", "hermes", "kapso", "rag", "openrouter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "httpx>=0.27,<1.0",
    "structlog>=24.1,<25.0",
    # Ingestion (Fase 4): multimodal extractors. Audio/Video/Image quedan tras
    # ports + mocks hasta que se conecten Whisper/Gemini.
    "pypdf>=4.0,<6.0",
    "python-docx>=1.1,<2.0",
    # Security (Fase 13): AES-256-GCM for tokens + rate limiting + bcrypt
    # for dashboard auth (PR #23).
    "cryptography>=42,<47",
    "slowapi>=0.1.9,<1.0",
    "bcrypt>=4.1,<5.0",
    # HTML scraping for the agnostic data layer (PR #36) — BeautifulSoup with
    # the bundled html.parser backend (no lxml C deps). Tenants can register
    # an HtmlScraperDataSource pointing at any public listings page and the
    # sync job extracts items using CSS selectors.
    "beautifulsoup4>=4.12,<5.0",
]

[project.urls]
Homepage = "https://github.com/fmonfasani/waseller"
Source = "https://github.com/fmonfasani/waseller"
Issues = "https://github.com/fmonfasani/waseller/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "build>=1.2,<2.0",
    "twine>=5.0,<7.0",
]
postgres = ["psycopg[binary]>=3.1,<4.0"]
# Whisper local: instalá faster-whisper aparte (no es default por peso).
# Gemini / OpenAI: las adapters se construyen contra OpenAIAdapter de AINE.

[project.scripts]
waseller = "waseller.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sdk/waseller"]

# -----------------------------------------------------------------------------
# Ruff
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["sdk", "services"]
extend-exclude = ["infra", "dashboard", "services/gateway"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "C4", "SIM", "PL", "RUF", "ANN", "ASYNC"]
ignore = ["ANN101", "ANN102", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "ANN", "PLR2004"]
"**/__init__.py" = ["F401"]
# CLI dispatches subcommands — many returns is natural and clearer than refactoring.
"sdk/waseller/cli.py" = ["PLR0911"]
# SkillResult.ok is a builder helper; **data is intentionally dynamic.
"sdk/waseller/skills/base.py" = ["ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["waseller"]
force-sort-within-sections = true

# -----------------------------------------------------------------------------
# mypy
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
mypy_path = "sdk"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ["^infra/", "^dashboard/", "^services/gateway/"]

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
pythonpath = ["sdk", "."]
asyncio_mode = "auto"
markers = [
    "unit: pure unit tests",
    "integration: requires external services (postgres/redis/meta)",
    "smoke: in-process wiring checks",
]

[tool.coverage.run]
branch = true
source = ["waseller"]
